# metaboflux

./: AUTHOR  CMakeCache.txt  CMakeLists.txt  ChangeLog  FindGSL.cmake  FindLibsbml.cmake  Makefile  MetaBoFlux_install.sh  README  cmake_install.cmake
doc/: CMakeLists.txt  Doxyfile-html  Doxyfile-html.cmake  Makefile  cmake_install.cmake
doc/.svn/: all-wcprops  entries
doc/.svn/text-base/: cmake_install.cmake.svn-base
examples/: modele_glycosome.xml
examples/.svn/: all-wcprops  entries
examples/.svn/text-base/: parametre_glycosome.xml.svn-base
include/: gsl_mod.h  simulation.h
include/.svn/: all-wcprops  entries
include/.svn/text-base/: data_parameters.h.svn-base  equations.h.svn-base  especes.h.svn-base  gsl_min.h.svn-base  gsl_recuit.h.svn-base  gsl_sd.h.svn-base  mpi_load.h.svn-base  xml_parameter.h.svn-base
lib/: libAnalysis.py  libCompute.py~
lib/.svn/: all-wcprops  entries
lib/.svn/text-base/: libCompute.py.svn-base  libGetfiles.py.svn-base  libXml.py.svn-base
src/: MetaBoFlux.c  equations.c  especes.c  gsl_min.c  simulation.c  xml_parameter.c
src/.svn/: all-wcprops  entries
src/.svn/text-base/: data_parameters.c.svn-base  gsl_mod.c.svn-base  gsl_recuit.c.svn-base  gsl_sd.c.svn-base  mpi_load.c.svn-base  simulation.c.svn-base
temp/: simulation_glycosome_compilation.txt  simulation_glycosome_compilation_group.txt  simulation_glycosome_group_log.txt  simulation_glycosome_group_modeling.txt  simulation_glycosome_mean_proportion.txt  simulation_glycosome_minimization.txt  simulation_glycosome_minimization_log.txt  simulation_glycosome_modeling.txt  simulation_glycosome_modeling_log.txt  simulation_glycosome_ratio.txt  simulation_glycosome_sd.txt  simulation_glycosome_simulated_annealing_1.txt  simulation_glycosome_simulated_annealing_2.txt  simulation_glycosome_simulated_annealing_3.txt  simulation_glycosome_simulated_annealing_4.txt  simulation_glycosome_simulated_annealing_5.txt
temp/.svn/: all-wcprops  entries
temp/.svn/text-base/: simulation_glycosome_compilation.txt.svn-base  simulation_glycosome_log.txt.svn-base  simulation_glycosome_minimization_sorted.txt.svn-base  simulation_glycosome_sd.txt.svn-base  simulation_glycosome_simulated_annealing_1.txt.svn-base  simulation_glycosome_simulated_annealing_2.txt.svn-base
